--- a/ciudades/contacto.html
+++ b/ciudades/contacto.html
@@ -33,6 +33,7 @@
                     <li><a href="cochabamba.html">Cochabamba</a></li>
                     <li><a href="santaCruz.html">Santa Cruz</a></li>
                     <li><a href="contacto.html">Reportar problema</a></li>
+                    <li><a href="faq.html">F.A.Q.</a></li>
                 </ul>
             </div>
         </nav>
