--- a/ciudades/faq.html
+++ b/ciudades/faq.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Faq</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/medium_view.css">
+    <link rel="stylesheet" type="text/css" href="css/tiwanaku.css">
+    <link rel="stylesheet" href="css/small_view.css">
+    <link rel="stylesheet" type="text/css" href="css/logo.css">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Tangerine">
+    <link rel = "stylesheet" href = "fonts/fontello-450542f5/fontello-450542f5/css/fontello.css">
+    <link rel="icon" type="image/png" href="images/logo.jpg">
 </head>
 <body>
     <header class="header">
@@ -38,7 +46,7 @@
     </main>
 
     <footer>
-        <script src="js/.js"></script>
+        <script src="js/faq.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="js/logo.js"></script>
         <div class="foot">
