--- a/ciudades/contacto.html
+++ b/ciudades/contacto.html
@@ -28,7 +28,7 @@
                 </div>
                 <span class="menu-icon">ver menu</span>
                 <ul>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="https://magne754.github.io/proyecto/layout.html">Inicio</a></li>
                     <li><a href="laPaz.html">La Paz</a></li>
                     <li><a href="cochabamba.html">Cochabamba</a></li>
                     <li><a href="santaCruz.html">Santa Cruz</a></li>
